--- a/src/about.html
+++ b/src/about.html
@@ -79,7 +79,7 @@
 <body>
 
     <div class="menu">
-        <div class="menuItem"><a href="">Home</a></div>
+        <div class="menuItem"><a href="/">Home</a></div>
 
     </div>
 
