Add Code for SVG Text

--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,13 @@
             align-items: center;
             justify-items: center;
         }
+        
+        text {
+            dominant-baseline: hanging;
+            font: 240px Roboto, Helvetica, Arial;
+            display: block;
+            font-weight: 900;
+        }
     </style>
 </head>
 
@@ -93,7 +100,17 @@
         <div class="charcoalglass">
             <div id="message" class="message">United States Military
             </div>
-
+            <!-- 
+            <div>
+                <svg width="1000" height="200" style="backdrop-filter:blur(8px)" clip-path="url(#cliptext)">
+                    <defs>
+                        <clipPath id="cliptext">
+                            <text>DAKOTA</text>
+                        </clipPath>
+                    </defs>
+                    <text fill="white" fill-opacity=".5">DAKOTA</text>
+                </svg>
+            </div> -->
         </div>
 
         <!-- <div id="desktopVideo">
@@ -114,6 +131,7 @@
             <div class="menuItem"><a href="about.html">About</a></div>
             <div class="menuItem"><a href="#bootcamp">Boot Camp</a></div>
             <div class="menuItem"><a href="#graduation">Graduation</a></div>
+            <div class="menuItem"><a href="https://www.google.com">Google</a></div>
         </div>
 
 
