Finalized for Now

--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
             <div class="menuItem"><a href="about.html">About</a></div>
             <div class="menuItem"><a href="#bootcamp">Boot Camp</a></div>
             <div class="menuItem"><a href="#graduation">Graduation</a></div>
-            <div class="menuItem"><a href="https://www.google.com">Google</a></div>
+            <!-- <div class="menuItem"><a href="https://www.google.com">Google</a></div> -->
         </div>
 
 
